--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,21 @@ img {
 }
 
 .loader {
-  margin-right: auto;
-  margin-left: auto;
-  position: relative;
+  height: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  position: absolute;
+}
+
+.loader-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #20285533;
 }
